Directory Structure Update

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-__pycache__
-pycache
+App/__pycache__
+App/pycache
 *.pyc
-.idea/
-venv/
-dist/
-log
-test_files/
-build/
+App/.idea/
+App/venv/
+App/dist/
+App/log
+App/test_files/
+App/build/
 *.spec
-backend/vendor/
-backend/logs/*
-server.public.key
-backend/bin/private.key
+API/vendor/
+API/logs/*
+App/server.public.key
+API/bin/private.key
+API/.idea/
