Added API Instructions, Fixed Home Folder Bug

--- a/API/public/.htaccess
+++ b/API/public/.htaccess
@@ -6,5 +6,7 @@ RewriteEngine On
 #
 # RewriteBase /
 
+RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^ index.php [QSA,L]
