Replaced PyQT with Eel -> Reduced overall Binary size to ~30mb

--- a/App/requirements_win.txt
+++ b/App/requirements_win.txt
@@ -2,6 +2,7 @@ cryptography
 pycryptodome
 requests
 pysocks
-pyqt5
 psutil
 pillow
+pywin32
+https://github.com/ThoughtfulDev/Eel/archive/master.zip
